Added table of results
pas super beau... mais ca fait l'affaire pour l'instant

--- a/client/src/app/race/results/results.component.css
+++ b/client/src/app/race/results/results.component.css
@@ -46,3 +46,13 @@ input:focus {
     color: red;
 
 }
+
+li {
+  list-style-type: none;
+}
+
+th, td {
+    border: 2px solid black;
+    padding: 15px;
+    text-align: left;
+}
