Added keyevent to add name in db and updated trackInfo model
changed completedtime array to be array of PlayerStats to have access to player name

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -33,7 +33,7 @@
       <span>description: </span>{{_trackInformation.track.description}}<br>
       <span>times played: </span>{{_trackInformation.track.timesPlayed}}<br>
       <li *ngFor="let time of _trackInformation.track.completedTimes">
-        {{time}} seconds
+        {{time.player}}: {{time.gameTime}} seconds
       </li>
   </div>
 </div>
