--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -38,12 +38,22 @@
     outline: none;
 }
 
-.selected{
-    border-color: red;
+.selected {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 4px solid red;
+    z-index: 1;
+    pointer-events: none;
 }
 
 .selected-other{
-    border-color: blue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 4px solid blue;
+    z-index: 1;
+    pointer-events: none;
 }
 
 .validate {
@@ -59,16 +69,6 @@
 .small-index {
 	font-size: 10px;
 }
-
-.border{
-    position: absolute;
-    top: 0;
-    left: 0;
-    border: 4px solid red;
-    z-index: 1;
-    pointer-events: none;
-}
-
 
 .validateOther{
     background: lightblue; 
