--- a/client/src/app/crosswords/mode/mode.component.mode.html
+++ b/client/src/app/crosswords/mode/mode.component.mode.html
@@ -18,7 +18,7 @@
     <div [hidden]="!isMultiPlayer()">
       
       <div class="input-row">
-          <span>Please enter your name:</span>
+          <label>Please enter your name:</label>
           <input (input)="onEnter($event.target.value)" />
       </div>
   
