--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -12,7 +12,7 @@
 						(keypress)="updateGrid($event, cell)" 
 						(keyup)="updateGrid($event, cell)"
 						maxlength="1" 
-            [class.is-black]="cell.char === '-'"
+            [class.is-black]="cell.black"
             (click)=selectCellFromGrid(cell)
             id={{cell.id}}
             />
