Fixed the server not starting

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -51,5 +51,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
+	text-align: center;
+}
+
+.center-box a {
+	text-decoration: none;
 }
