--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -17,7 +17,7 @@
   
     <div class="container">
 			<div class="inline-box">
-				<div class="box">
+				<div class="box clues">
 					<app-clues></app-clues>
         </div>
         
