--- a/client/src/app/crosswords/mode/mode.component.mode.html
+++ b/client/src/app/crosswords/mode/mode.component.mode.html
@@ -35,7 +35,7 @@
               <b>Difficulty: </b>: {{game.difficulty}}
           </div>
           <div class="players-right">
-              <button (click)="joinGame(game.name); closeDialog()">Join</button>
+              <button (click)="joinGame(game.name);">Join</button>
           </div>
         </div>
       </div>
