--- a/client/src/app/race/results/results.component.html
+++ b/client/src/app/race/results/results.component.html
@@ -36,7 +36,7 @@
             <button [disabled] = "!updatedName && isBestTime()">Main menu</button>
         </a>
         
-        <button [disabled] = "!updatedName && isBestTime()" (click)="playAgain()">Play Again</button>
+        <button [disabled] = "!updatedName && isBestTime()" (click)="restart()">Play Again</button>
         
         <button [disabled] = "!updatedName && isBestTime()" (click)="findGameResults()">Game results</button>
       </div>
