--- a/client/src/app/race/track-creation/track-creation.component.css
+++ b/client/src/app/race/track-creation/track-creation.component.css
@@ -1,3 +1,97 @@
 h1 {
     color: blueviolet;
 }
+
+#nav {
+    background-color: #23292F;
+    position: absolute;
+    top: 55px;
+    bottom: 0;
+    left: 0;
+    width: 280px;
+    color: #fff;
+    padding: 20px 30px;
+}
+
+#nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#nav a {
+    color: rgba(255,255,255,0.8);
+    text-decoration: none;
+    font-weight: 200;
+    font-size: 18px;
+}
+
+#nav a li {
+    padding: 8px 12px;
+    border-radius: 4px;
+    margin: 2px -12px;
+}
+
+#nav a li:hover, #nav a.active li {
+    background-color: rgba(0,0,0,0.2);
+}
+
+#nav .green-button {
+    margin-top: 20px;
+    background-color: rgb(50, 168, 56);
+    color: #fff;
+    font-size: 14px;
+    width: 100%;
+}
+
+#content {
+    position: absolute;
+    top: 55px;
+    left: 280px;
+    bottom: 0;
+    right: 0;
+    overflow: auto;
+    padding: 20px 40px;
+    background-color: rgb(60, 61, 63);
+    color: #fff;
+}
+
+#content .split {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.inline-state {
+    margin-right: 10px;
+    display: inline-block;
+}
+
+.details {
+    margin-top: 30px;
+}
+
+.input-admin {
+    padding: 12px 20px;
+    border-radius: 6px;
+    background-color: rgba(0,0,0,0.1);
+    border: none;
+    font-size: 48px;
+
+    color: #fff;
+    font-weight: 100;
+    font-family: Roboto, sans-sherif;
+
+}
+
+.input-admin:focus {
+    outline: none;
+    background-color: rgba(0,0,0,0.2);
+}
+
+.input-full-width {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
