--- a/client/src/app/race/track-creation/track-creation.component.html
+++ b/client/src/app/race/track-creation/track-creation.component.html
@@ -1,22 +1,41 @@
-<div id="track" #container oncontextmenu="return false" (mousedown)="onKeyDown($event)" (mouseup)="onKeyUp($event)">
-</div>
-<div>
-  <button (click)="save()">save track</button>
-  <button (click)="startNewTrack()">start new track</button>
-  <button (click)="deleteTrack()">delete track</button>
-</div>
-<div *ngIf="_isSaved">
-  track is saved!
-</div>
+<nav id="nav">
+  <ul>
+    <a *ngFor="let track of _trackInformation.tracks" [class.active]="_id === track" routerLink="/admin/{{track}}">
+      <li>{{track}}</li>
+    </a>
+  </ul>
 
-<div>
-  <div><span>name: </span><input [(ngModel)]="_trackInformation.track.name"></div>
-  <div><span>type: </span><input [(ngModel)]="_trackInformation.track.type"></div>
-  <div><span>description: </span><input [(ngModel)]="_trackInformation.track.description"></div>
-</div>
+  <button class="green-button" (click)="startNewTrack()">
+    <div class="center">
+      <i class="material-icons">add</i> NEW TRACK
+    </div>
+  </button>
+</nav>
 
-<div>
-  <li *ngFor="let track of _trackInformation.tracks">
-    <button (click)="getTrackInfo(track)">{{track}}</button>
-  </li>
+<div id="content">
+
+  <div class="split">
+    <input class="input-admin" [(ngModel)]="_trackInformation.track.name" placeholder="Name" />
+    <div>
+      <div class="inline-state" *ngIf="_isSaved">Saved!</div>
+      <button (click)="save()">
+        <div class="center">
+          <i class="material-icons">save</i> Save
+        </div>
+      </button>
+      <button (click)="deleteTrack()">
+        <div class="center">
+          <i class="material-icons">delete</i>
+        </div>
+      </button>
+    </div>
+  </div>
+
+
+  <div id="track" #container oncontextmenu="return false" (mousedown)="onKeyDown($event)" (mouseup)="onKeyUp($event)"></div>
+
+  <div class="details">
+    <input class="input-admin input-full-width" [(ngModel)]="_trackInformation.track.type" placeholder="Type" />
+    <textarea class="input-admin input-full-width" (ngModel)="_trackInformation.track.description" placeholder="Description">{{_trackInformation.track.description}}</textarea>
+  </div>
 </div>
