--- a/client/src/app/race/results/results.component.css
+++ b/client/src/app/race/results/results.component.css
@@ -66,7 +66,11 @@ h3 {
 }
 
 .player {
-    background-color: #50b0da;
+    animation: color_change 1s infinite alternate;
+}
+@keyframes color_change {
+	from { background-color: #50b0da; }
+	to { background-color: none; }
 }
 
 #options {
