--- a/client/src/app/race/results/results.component.css
+++ b/client/src/app/race/results/results.component.css
@@ -73,9 +73,8 @@ h3 {
 	to { background-color: none; }
 }
 
-#options {
+button {
     margin-top: 2%;
-    vertical-align: middle;
 }
 
 #options > button:last-child {
