Enlever attribut pas necessaire

--- a/client/src/app/race/results/results.component.html
+++ b/client/src/app/race/results/results.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="_game.gameIsFinished && showModal">
+<div *ngIf="_game.gameIsFinished">
   <div id="resultsModal" class="modal">
     <div *ngIf="!showGameResults"  class="modal-content">
 
