Changed games to track

--- a/client/src/app/race/game-component/game.component.html
+++ b/client/src/app/race/game-component/game.component.html
@@ -48,7 +48,7 @@
   <div class="tracks-container">
 
       <div class="traks-list">
-        <h1>Games</h1>
+        <h1>Tracks</h1>
         <div class="track" *ngFor="let track of _trackInformation.tracks">
           <h2>{{track}}</h2>
           <button (click)="getTrackInfo(track)">View info</button>
